fix/overflow-x

--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -8,6 +8,7 @@
   background-color: rgb(25, 4, 45);
   text-transform: capitalize;
   transition: background-color 1000ms ease;
+  color: white;
 }
 
 .loadBtn:hover,
