--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,8 @@
 :root {
-  --primary-color: #f6f6f6;
-  --secondary-color: #1b1b1b;
-  --section-gray-color: #7e847f;
-  --accent-color: #7e847f;
-  --section-bgr-color: #e8e8e8;
-  --table-header-color: #ffffff;
-  --btn-accent-color: #5f6560;
-  --hover-color: #646cff;
-  --status-online-color: #1cd71c;
-  --status-offline-color: #ff0000;
-
   font-family: DM Sans, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
-  color: var(--secondary-color);
-  background-color: var(--primary-color);
+  color-scheme: light;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -37,9 +24,8 @@
 }
 
 body {
-  min-width: 320px;
+  max-width: 100vw;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 h1,
@@ -69,19 +55,14 @@ ul {
 
 a {
   font-weight: 500;
-  text-decoration: inherit;
+  text-decoration: none;
   color: currentColor;
   text-decoration: none;
-}
-
-a:hover {
-  color: var(--hover-color);
 }
 
 button {
   border: 1px solid transparent;
   font-family: inherit;
-  background-color: var(--secondary-color);
   cursor: pointer;
 }
 
@@ -92,9 +73,6 @@ button:focus-visible {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
 }
 
 button:hover {
